# everybody-codes

./: .gitignore  README.md  main.py  pyproject.toml
notes/year2025/: day1a.txt  day1b.txt  day1c.txt  day2b.txt
src/: __init__.py
src/utils/: registry.py
src/year2025/: day1a.py  day1b.py  day1c.py  day2a.py  day2b.py
tests/year2025/: test_day1a.py  test_day1b.py  test_day1c.py  test_day2a.py  test_day2b.py
