[project]
name = "everybody-codes"
version = "0.1.0"
description = "my solutions for everybody.codes exercises"
requires-python = ">=3.14"
dependencies = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # conflicts
    "COM812", # conflicts with ruff format
    "D203", # conflicts with D211
    "D213", # conflicts with D212

    # deselect
    "ANN", # we are using a typechecker
    "D", # documentation is not a concern for this project
    "S", # security is not a concern for this project
    "T201", # `print` usage is OK for this project
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-pytest-style]
parametrize-values-type = "tuple"
parametrize-names-type = "csv"
